chore: Update app.module.ts and prizes.module.ts
